--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Builder Research</title>
     <script src="%PUBLIC_URL%/vendor/fabric.js" ></script>
     <script src="%PUBLIC_URL%/vendor/jquery-3.4.1.js" ></script>
   </head>
